add yum upgrade

--- a/roles/yum/tasks/main.yml
+++ b/roles/yum/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: upgrade all packages
+  yum:
+    name: '*'
+    state: latest
+
 - name: install yum packages
   yum:
     name: '{{ item.name }}'
